[package]
name = "vector_db_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
macron = { version = "*", features = ["full"] }
openai_api_rust = "0.1.9"
dotenv = "0.15"
tokio = { version = "1.46.1", features = ["full"] }
async-std = { version = "1.13.1", features = ["attributes"] }
logging = "0.1.0"
log = "*"
ndarray = "*"
ndarray-linalg = "*"
regex = "*"
ctrlc = "*"
lm-studio-api-extended = "0.1.1"
anyhow = "*"
reqwest = "*"
serde = "*"
serde_json = "*"