[package]
name = "vector_db_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
macron = { version = "*", features = ["full"] }
dotenv = "0.15"
tokio = { version = "1.46.1", features = ["full"] }
async-std = { version = "1.13.1", features = ["attributes"] }
logging = "0.1.0"
log = "*"
regex = "*"
ctrlc = "*"
lm-studio-api-extended = { path = "../rs-lm-studio-api-extended" }
anyhow = "*"
reqwest = "*"
serde = "*"
serde_json = "*"